# SerializeCppClassesToTypescript

./: CMakeLists.txt  readme.txt
include/: balance.hpp  order.hpp
src/: Binder.h  ClassDescriptor.h  ObjectRegistry.cpp  ObjectRegistry.h  main.cpp
